@startuml
hide methods
skinparam classAttributeIconSize 0

class Company {
  -designation
}

class VaccinationCenter{
  -name
  -address
  -emailAddress
  -phoneNumber
  -faxNumber
  -websiteAddress
  -time
}

class VaccineAdministration {
  -dose
  -lotNumber
  -date
}

class SNSUser {
  - citizenCard
  - snsNumber
  - name
  - birthDay
  - gender
  - phoneNumber
  - email
  - address
}

class Vaccine {
  -designation
  -id
  -brand
}

class VaccineType {
  -code 
  -description
  -technology
}


VaccineAdministration "1" -- "*" SNSUser : has >
VaccineAdministration "1" -- "1" Vaccine : has >
VaccinationCenter "1" -- "*" VaccineAdministration : has >
Vaccine "*" -- "1" VaccineType : has <

Company "1" -- "*" VaccinationCenter : knows >
Company "1" -- "*" SNSUser : knows >
Company "1" -- "*" Vaccine : knows >


@enduml